# biospy

./: .gitignore  CLAUDE.md  README.md  justfile  main.py  pyproject.toml  ruff.toml
.github/workflows/: python.yml  rust.yml
configs/: default.toml  test.toml
docs/: API_PYTHON.md  API_RUST.md  ARCHITECTURE.md  DEVELOPMENT.md
python-sdk/: pyproject.toml
python-sdk/biospy/: __init__.py  attribution.py  config.py  core.py  detection.py  utils.py
python-sdk/biospy/libbiospy_core.dylib.dSYM/Contents/: Info.plist
python-sdk/biospy/libbiospy_core.dylib.dSYM/Contents/Resources/Relocations/aarch64/: libbiospy_core.dylib.yml
python-sdk/biospy/models/: __init__.py  attributor.py  classifier.py  detector.py
rust-core/: Cargo.toml
rust-core/biospy-core/: Cargo.toml
rust-core/biospy-core/src/: bloom.rs  feat.rs  io.rs  kmer.rs  lib.rs  py.rs  seq.rs  sketch.rs
scripts/: bench.sh  setup.sh
services/: README.md
tests/fixtures/: sample.fasta  sample.fastq
tests/python/: conftest.py  test_attribution.py  test_detection.py
tests/rust/: test_io.rs
